nvim add luasnips, other updates

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -36,7 +36,8 @@ radius = 12
 
 ; dpi = 96
 
-background = ${colors.background}
+background = #CA002b36
+;${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
