nvim comments, polybar updates

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -30,20 +30,21 @@ disabled = ${colors.light-purple}
 primary = ${colors.teal}
 
 [bar/bar]
-width = 100%
+width = 99%
 height = 20pt
-radius = 12
+radius = 5
+offset-x = 7
+offset-y = 7
 
-; dpi = 96
+dpi = 100
 
-background = #CA002b36
-;${colors.background}
+background = #AF002b36
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 2pt
 
-border-size = 4pt
-border-color = #00000000
+border-size = 2pt
+border-color = ${colors.really-dark-purple}
 
 padding-left = 1
 padding-right = 2
@@ -53,7 +54,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "Hack Nerd Font:size=10;2"
+font-0 = "Hack Nerd Font:size=9;2"
 font-1 = "FontAwesome:size=13;4"
 
 modules-left = bspwm xwindow
@@ -77,7 +78,7 @@ tray-position = right
 type = internal/bspwm
 
 label-active = %icon%
-label-active-background = ${colors.black}
+label-active-background = #002b36
 label-active-foreground = ${colors.cyan}
 label-active-padding = 1
 
@@ -91,7 +92,7 @@ label-urgent-padding = 1
 label-urgent-foreground = ${colors.pink}
 
 label-empty = %icon%
-label-empty-foreground = ${colors.dark-purple}
+label-empty-foreground = ${colors.really-dark-purple}
 label-empty-padding = 1
 
 ws-icon-0 = I;
