comic shanns, polybar updates

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -32,7 +32,7 @@ primary = ${colors.teal}
 [bar/bar]
 width = 99%
 height = 20pt
-radius = 5
+radius = 12
 offset-x = 7
 offset-y = 7
 
@@ -46,7 +46,7 @@ line-size = 2pt
 border-size = 2pt
 border-color = ${colors.really-dark-purple}
 
-padding-left = 1
+padding-left = 0.5
 padding-right = 2
 
 module-margin = 1
@@ -54,8 +54,9 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "Hack Nerd Font:size=9;2"
-font-1 = "FontAwesome:size=13;4"
+font-0 = "Comic Shanns:size=10;2"
+font-1 = "Hack Nerd Font:size=10.4;2"
+font-2 = "FontAwesome:size=13;4"
 
 modules-left = bspwm xwindow
 modules-center = 
@@ -77,22 +78,22 @@ tray-position = right
 [module/bspwm]
 type = internal/bspwm
 
-label-active = %icon%
-label-active-background = #002b36
-label-active-foreground = ${colors.cyan}
+label-active = 
+; label-active-background = #002b36
+label-active-foreground = ${colors.orange}
 label-active-padding = 1
 
-label-occupied = %icon%
+label-occupied = 
 label-occupied-padding = 1
-label-occupied-foreground = ${colors.yellow}
+label-occupied-foreground = ${colors.dark-purple}
 
-label-urgent = %icon%
+label-urgent = 硫
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 label-urgent-foreground = ${colors.pink}
 
-label-empty = %icon%
-label-empty-foreground = ${colors.really-dark-purple}
+label-empty =  
+label-empty-foreground = ${colors.dark-purple}
 label-empty-padding = 1
 
 ws-icon-0 = I;
@@ -122,7 +123,7 @@ label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-format-volume-prefix = " "
+format-volume-prefix = "  "
 format-volume-prefix-foreground = ${colors.orange}
 format-volume = <label-volume>
 label-volume = %percentage%%
@@ -133,7 +134,7 @@ label-muted = %{F#707880}muted
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = "  "
 format-prefix-foreground = ${colors.green}
 label = %percentage_used:2%%
 
@@ -190,7 +191,7 @@ label-close-foreground = ${colors.green}
 [module/xbacklight]
 type = internal/xbacklight
 output = eDP1
-label =  %percentage%%
+label =   %percentage%%
 label-foreground = ${colors.cyan}
 
 
