--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -9,18 +9,18 @@ window:
 
 font:
   normal:
-    family: "Hack Nerd Font"
+    family: "Comic Shanns"
     style: Regular
-  bold:
-    family: "Hack Nerd Font"
-    style: Bold
-  italic:
-    family: "Hack Nerd Font"
-    style: Italic
-  bold_italic:
-    family: "Hack Nerd Font"
-    style: Bold Italic
-  size: 9.8
+  # bold:
+  #   family: "Hack Nerd Font"
+  #   style: Bold
+  # italic:
+  #   family: "Hack Nerd Font"
+  #   style: Italic
+  # bold_italic:
+  #   family: "Hack Nerd Font"
+  #   style: Bold Italic
+  size: 11.5
 
 cursor:
   unfocused_hollow: true
