--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,7 +55,7 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = "Comic Shanns:size=10;2"
-font-1 = "Hack Nerd Font:size=10.4;2"
+font-1 = "FiraCode Nerd Font:size=11;2"
 font-2 = "FontAwesome:size=13;4"
 
 modules-left = bspwm xwindow
@@ -78,10 +78,10 @@ tray-position = right
 [module/bspwm]
 type = internal/bspwm
 
-label-active = 
+label-focused = 
 ; label-active-background = #002b36
-label-active-foreground = ${colors.orange}
-label-active-padding = 1
+label-focused-foreground = ${colors.orange}
+label-focused-padding = 1
 
 label-occupied = 
 label-occupied-padding = 1
