--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family      Fira Code Medium
-bold_font        Fira Code Bold
+font_family      Fira Code Medium Nerd Font Complete
+bold_font        Fira Code Bold Nerd Font Complete
 
 # Font size (in pts) 
 font_size        10
@@ -9,7 +9,7 @@ font_size        10
 font_size_delta 4 
 
 # The background opacity
-background_opacity  0.9
+background_opacity  0.96
 
-include mocha.conf
-
+#include mocha.conf
+include onehalf-dark.conf
