--- a/kitty/onehalf-dark.conf
+++ b/kitty/onehalf-dark.conf
@@ -3,7 +3,7 @@
 # By https://github.com/dbinary
 
 foreground            #dcdfe4
-background            #282c34
+background            #161320
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
