--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,17 @@
-font_family      Fira Code Medium Nerd Font Complete
-bold_font        Fira Code Bold Nerd Font Complete
+font_family						Fira Code Medium Nerd Font Complete Windows Compatible
+bold_font							Fira Code Bold Nerd Font Complete
+italic_font						Fisa Code Book Italic
+bold_italic_font			Fisa Code Bold Italic
 
 # Font size (in pts) 
-font_size        10
+font_size        				10
 
 # The amount the font size is changed by (in pts) when increasing/decreasing 
 # the font size in a running terminal. 
-font_size_delta 4 
+font_size_delta 				4 
 
 # The background opacity
-background_opacity  0.96
+background_opacity  			0.92
 
 #include mocha.conf
 include onehalf-dark.conf
