--- a/waybar/config
+++ b/waybar/config
@@ -1,14 +1,12 @@
 {
-	"layer": "top",
-	"modules-left": ["custom/launcher","cpu","memory","network","tray"],
-	"modules-center": ["river/tags"],
+	"modules-left": ["custom/launcher","cpu","memory","network"],
+	"modules-center": ["river/tags","tray"],
 	"modules-right": ["backlight", "pulseaudio","battery", "clock", "custom/power"],
 	
   "river/tags": {
     "num-tags": 6,
 		"tag-labels": ["","","","","狀",""]
   },
-
 	"pulseaudio": {
 		"tooltip": false,
 		"scroll-step": 5,
@@ -42,11 +40,11 @@
             "warning": 30,
             "critical": 20
         },
-        "format": "{icon}  {capacity}%",
+        "format": "{icon} {capacity}%",
         "format-charging": " {capacity}%",
         "format-plugged": " {capacity}%",
         "format-alt": "{time} {icon}",
-        "format-icons": ["   ", "   ", "   ", "   ", "   "]
+        "format-icons": ["🪫", "🔋"]
     },
 	"tray":{
 		"icon-size":18,
@@ -62,7 +60,7 @@
     },
     "memory": {
         "interval": 30,
-        "format": "🧠 {used:0.1f}G/{total:0.1f}G",
+        "format": "🧠 {used:.2f}G/{total:.2f}G",
         "max-length": 20
     },
     "custom/launcher":{
