--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,10 @@
-font_family						Fira Code Medium Nerd Font Complete Windows Compatible
-bold_font							Fira Code Bold Nerd Font Complete
-italic_font						Fisa Code Book Italic
-bold_italic_font			Fisa Code Bold Italic
+font_family						Caskaydia Cove Nerd Font Complete Semibold
+bold_font							Caskaydia Cove Nerd Font Complete Bold
+italic_font						Caskaydia Cove Nerd Font Complete SemiBold Italic
+bold_italic_font			Caskaydia Cove Nerd Font Complete Bold Italic
 
 # Font size (in pts) 
-font_size        				10
+font_size        				9
 
 # The amount the font size is changed by (in pts) when increasing/decreasing 
 # the font size in a running terminal. 
@@ -13,5 +13,4 @@ font_size_delta 				4
 # The background opacity
 background_opacity  			0.92
 
-#include mocha.conf
 include onehalf-dark.conf
