--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family						Caskaydia Cove Nerd Font Complete Semibold
-bold_font							Caskaydia Cove Nerd Font Complete Bold
-italic_font						Caskaydia Cove Nerd Font Complete SemiBold Italic
-bold_italic_font			Caskaydia Cove Nerd Font Complete Bold Italic
+font_family						Fira Code Medium Nerd Font Complete
+bold_font							Fira Code Bold Nerd Font Complete
+#italic_font						Caskaydia Cove Nerd Font Complete SemiBold Italic
+#bold_italic_font			Caskaydia Cove Nerd Font Complete Bold Italic
 
 # Font size (in pts) 
 font_size        				9
