--- a/kitty/onehalf-dark.conf
+++ b/kitty/onehalf-dark.conf
@@ -3,8 +3,8 @@
 # By https://github.com/dbinary
 
 foreground            #dcdfe4
-background            #161719
-selection_foreground  #000000
+background            #0d1117
+selection_foreground  #0d1117
 selection_background  #FFFACD
 url_color             #0087BD
 
