--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,14 @@
-font_family						Fira Code Medium Nerd Font Complete
-bold_font							Fira Code Bold Nerd Font Complete
-#italic_font						Caskaydia Cove Nerd Font Complete SemiBold Italic
-#bold_italic_font			Caskaydia Cove Nerd Font Complete Bold Italic
+font_family						IosevkaTerm NF Medium
+bold_font							IosevkaTerm NF Bold
+italic_font						IosevkaTerm NF Medium Italic
+bold_italic_font			IosevkaTerm NF Bold Italic
 
 # Font size (in pts) 
-font_size        				9
+font_size        			11
 
 # The amount the font size is changed by (in pts) when increasing/decreasing 
 # the font size in a running terminal. 
-font_size_delta 				4 
+font_size_delta 			4 
 
 # The background opacity
 background_opacity  			1
