--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,7 @@ italic_font						IosevkaTerm NF Medium Italic
 bold_italic_font			IosevkaTerm NF Bold Italic
 
 # Font size (in pts) 
-font_size        			11
+font_size        			10.5
 
 # The amount the font size is changed by (in pts) when increasing/decreasing 
 # the font size in a running terminal. 
@@ -13,4 +13,8 @@ font_size_delta 			4
 # The background opacity
 background_opacity  			1
 
+# Theme
 include onehalf-dark.conf
+
+# Disable annoying terminal sound
+enable_audio_bell no
