kitty theme changes

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
-font_family						IosevkaTerm NF Medium
-bold_font							IosevkaTerm NF Bold
-italic_font						IosevkaTerm NF Medium Italic
+font_family				IosevkaTerm NF Medium
+bold_font				IosevkaTerm NF Bold
+italic_font				IosevkaTerm NF Medium Italic
 bold_italic_font			IosevkaTerm NF Bold Italic
 
 # Font size (in pts) 
@@ -14,7 +14,10 @@ font_size_delta 			4
 background_opacity  			1
 
 # Theme
-include onehalf-dark.conf
+include 				theme.conf
 
-# Disable annoying terminal sound
+# Disable terminal sound
 enable_audio_bell no
+
+# confirm closing only if more than one window open
+confirm_os_window_close 		2
